# HelloWorld_tests

./: CMakeLists.txt  HelloWorld_tests.sln  README.md
.github/workflows/: release.yml
HelloWorld_tests/: CMakeLists.txt  HelloWorld_tests.cpp  HelloWorld_tests.vcxproj  HelloWorld_tests.vcxproj.filters
HelloWorld_tests/HelloWorld/: main.cpp  version.cpp
HelloWorld_tests/HelloWorld_tests/: CMakeLists.txt  hello.cpp  version.h
HelloWorld_tests/tests/: CMakeLists.txt  test_helloworld.cpp
HelloWorld_tests/workflows/: release.yml
tests/: test_helloworld.cpp
